k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cstore
  labels:
    name: cstore
    environment: production
